k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fortuna-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # This image name will be replaced by CI/CD automatically
          image: meirevenhaim/fortuna-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
