k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fortuna-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: backend
