k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fortuna-app
# Use NodePort for Minikube/Free EC2 instead of AWS LoadBalancer
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  selector:
    app: frontend
