k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: fortuna-app
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
